<resources>
    <string name="app_name">MyResto</string>
    <string name="tit_main_activity">Realizar Pedido</string>
    <string name="lblNombreCliente">Nombre</string>
    <string name="textview">TextView</string>
    <string name="reservar_mesa">Reservar Mesa</string>
    <string name="envio_a_domicilio">Envio a Domicilio</string>
    <string name="ingrese_su_pedido_detallado">Ingrese su pedido detallado</string>
    <string name="incluir_propinas">Incluir Propinas</string>
    <string name="nombre">Nombre</string>
    <string name="permitir_cancelar">Permitir Cancelar</string>
    <string name="bebida_xl">Bebida Xl</string>
    <string name="notificar_confirmacion">Notificar Confirmacion</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="nuevos_pedidos">Nuevos Pedidos</string>
    <string name="menos_productos">-</string>
    <string name="mas_productos">+</string>
    <string name="cantidad_productos">0</string>
    <string name="agregar_productos">Agregar Productos</string>
    <string name="buscar_menu">Buscar Menu</string>
    <string name="total">Total:</string>
</resources>
